force-app/main/default/objects/Timefold_Setting__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Roster</fullName><default>true</default><label>Roster labour rule</label></value>
            <value><fullName>Routes</fullName><default>false</default><label>Routing rule</label></value>
            <value><fullName>RoleSkill</fullName><default>false</default><label>Certificates a role demands</label></value>
            <value><fullName>Weight</fullName><default>false</default><label>Solver weight</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>