force-app/main/default/objects/Timefold_Setting__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Why this value is what it is. Changing a number without reading this is how a rule quietly stops meaning anything.</description>
</CustomField>