force-app/main/default/objects/Timefold_Setting__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Read as a number, a boolean or a string depending on the setting.</description>
</CustomField>