force-app/main/default/objects/Timefold_Setting__c/listViews/All_Settings.listView-meta.xml
<ListView>
    <fullName>All_Settings</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Value__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Settings</label>
</ListView>