force-app/main/default/objects/Timefold_Setting__c/listViews/Labour_Rules.listView-meta.xml
<ListView>
    <fullName>Labour_Rules</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Roster</value>
    </filters>
    <label>Roster Labour Rules</label>
</ListView>