force-app/main/default/objects/Timefold_Setting__c/listViews/Solver_Weights.listView-meta.xml
<ListView>
    <fullName>Solver_Weights</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Weight</value>
    </filters>
    <label>Solver Weights</label>
</ListView>